# ChangeLog for dev-libs/openspecfun
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openspecfun/ChangeLog,v 1.1 2014/08/21 09:03:51 patrick Exp $

*openspecfun-0.4 (21 Aug 2014)

  21 Aug 2014; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +openspecfun-0.4.ebuild:
  Initial import, ebuild by me. Dependency of dev-lang/julia