@@ -1,4 +1,4 @@
 DIST openspecfun-0.4.tar.gz 127722 SHA256 bf98de20d429f6d9abedf47f2118350b3160875dd717b50a9f98415aa51c4a5b SHA512 51374e6e7c3b24967dbe7b670ee28282c769a9cffd48823968c632183f7a27ccd695bbe448d00af2a70cfe55eaa122bc62261532935a8be91ec9a9704a6818d7 WHIRLPOOL b3446fa952db8a8e065b3e2ef7cdd8abff9f29d69402dc94427d74d81511fbe0a35f560e839c054c208d37776af880a5a8bd74d3daf19aed35037b35759d0c57
-EBUILD openspecfun-0.4.ebuild 624 SHA256 e4b5019da96a34f682ef29ae95e31df0b7d411716e539e599ab6826dcc07d971 SHA512 393e4afe3262d5f28fe88b3c1b0add259fcb7655fc702a231940d3f008de161f3842268932988d915b811bdf5041f7ee89ceb69d5f74757e3dbd02af487abf6c WHIRLPOOL 806c47f81333651579c3e97e48c55f9e960b4b905cce5cad8522f2696f930c58379164e8b8a870ac3aba4a2b45732d00e7ca542ede23bc37029ae65bff84b727
-MISC ChangeLog 399 SHA256 a5ad9e979aee944c617248920c988c64639cabda7238bbfea8f819b3c6be50a7 SHA512 e32ecd6e3634650b4ab0301adf48140f0106523e68f8bae0d698c06954f92680b0604d34868a051480a69efb6d25f6dfa823de3964d04f34154d46ffd9aa94c6 WHIRLPOOL d5b674d4b1f19e6d5df5b00933d2f60d37302e5238fffd6c79e6066b16f3dee95c99c39c38c9663e910188bfeafcca6993f294ab62ed8d79d03c57d8909bbfae
+EBUILD openspecfun-0.4-r1.ebuild 706 SHA256 655485a11ff043051b739e7541d5a053def3b6778e32c3fc69ed480ed2e1bcee SHA512 bac1b05810dd3beb2d73ee537d374661529b432603de8266b3c3c3783b9a14257203aebb6315cc1856498aacd7a48c40878ba4a83c432a8f152d41399d0b2453 WHIRLPOOL 7a826b7b77dcfd9503f999f2358c7edbff022017ce25d5178231a1da697e437c8750e3c1cc54fd97d51644112ca49f81b5616c5361af0c9474d5c03f81fb8b9d
+MISC ChangeLog 580 SHA256 2d4868a57336b97f5bd996af0db678d345e96e319396b46f6eaba402cfa41147 SHA512 71ea46ea7b0beaa890941739b7a8b019fdbed4afe94f7de8dae93ad596f267c58060a09add4acae752d47b23fbecd400db6085171140aa6044fe6fa83294f91f WHIRLPOOL 9c1e6ede03477bf0b32b0e65ef9ea0cde3eeb6158c571c8cabe077555edac77512947f956bf52a16e4fabeea34982c4378c95555f370f6fe33ad12bb898219d5
 MISC metadata.xml 248 SHA256 4e66cdbeaaaaa265e5cf9dbb4fff539d49c89b684d121bae38d5100971c2ac1a SHA512 4619dec725623f63fd468ca174b57d0698ec30c29f73dbb4e70641b77fdc63790185b2c373057cb9211b6ced5ae05ada30bb1479ad7fee9a9951ae3cf4196f6d WHIRLPOOL f6247fe54e48365b181464e2aa611b1e12fc152e91cf5f9fe0f5da059db37a50c114ba91274860e749d14dfb62bf66c49c48cac9539c9cfa47f3a1896ca90ecf
