@@ -1,8 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openspecfun/openspecfun-0.4.ebuild,v 1.1 2014/08/21 09:03:51 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openspecfun/openspecfun-0.4-r1.ebuild,v 1.1 2014/08/27 03:40:29 patrick Exp $
 
 EAPI=5
+
+inherit multilib
 
 DESCRIPTION="A collection of special mathematical functions"
 HOMEPAGE="http://julialang.org/"
@@ -17,6 +19,10 @@ IUSE=""
 
 RDEPEND="virtual/fortran"
 DEPEND="${RDEPEND}"
+
+src_prepare() {
+	sed -i "s:/lib:/$(get_libdir):" Make.inc
+}
 
 src_install() {
 	emake DESTDIR="${D}" prefix="/usr" install
