@@ -1,4 +1,4 @@
-DEFINED_PHASES=install
+DEFINED_PHASES=install prepare
 DEPEND=virtual/fortran
 DESCRIPTION=A collection of special mathematical functions
 EAPI=5
@@ -8,4 +8,5 @@ LICENSE=MIT public-domain
 RDEPEND=virtual/fortran
 SLOT=0
 SRC_URI=https://github.com/JuliaLang/openspecfun/archive/v0.4.tar.gz -> openspecfun-0.4.tar.gz
-_md5_=b4b4d89da307e6f218f9967220d3abed
+_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=cefe9d2ead16ca6df287d652cc194ed5
