@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/openspecfun
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openspecfun/ChangeLog,v 1.1 2014/08/21 09:03:51 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openspecfun/ChangeLog,v 1.2 2014/08/27 03:40:29 patrick Exp $
+
+*openspecfun-0.4-r1 (27 Aug 2014)
+
+  27 Aug 2014; Patrick Lauer <patrick@gentoo.org> +openspecfun-0.4-r1.ebuild,
+  -openspecfun-0.4.ebuild:
+  Fix multilib-strict behaviour #520910
 
 *openspecfun-0.4 (21 Aug 2014)
 
